--- a/src/main/card.css
+++ b/src/main/card.css
@@ -13,6 +13,29 @@
   background-image: url("../img/DefaultHover.png");
 }
 
+.cardOff {
+  height: 480px;
+  width: 320px;
+  cursor: pointer;
+  background-image: url("../img/Selected3.png");
+}
+
+.cardOff::after {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0.6;
+  background-image: url("../img/Selected3.png");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
 .card_selected {
   height: 480px;
   width: 320px;
